# btc_alpha_engine3

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  WALKTHROUGH.md  alembic.ini  docker-compose.monitoring.yml  pyproject.toml
.github/workflows/: ci.yml
config/: assets.yaml  data_sources.yaml  live_trading.yaml  model_registry.yaml  prometheus.yml  risk_limits.yaml  walk_forward.yaml
config/grafana/: btc_alpha_dashboard.json
docs/adr/: 001-horizon-selection.md  002-risk-limits.md  003-sharpe-weighted-ensemble.md  004-monolith-to-phases.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_timescaledb_hypertables.py
scripts/: backfill_coinglass.py  backtest_historical.py  bootstrap_db.py  download_coinalyze_data.py  download_historical_data.py  load_csv_data.py  paper_trade.py  promote_models.py  run_agent.py  run_phase.py  shadow_live.py  train_walk_forward.py
src/agent/: __init__.py  alpha_agent.py  evolution_config.py  executor.py  guardrails.py  loop.py  phases.py  scorecard.py  signal_output.py
src/common/: __init__.py  config.py  logging.py  time_utils.py  types.py
src/compute/: __init__.py  chutes_client.py  dispatcher.py  lium_client.py  targon_client.py
src/data/: __init__.py  coinalyze_client.py  coinglass_client.py  hyperliquid_client.py  ingest_jobs.py  resampler.py  validators.py
src/execution/: __init__.py  emergency_cancel.py  hyperliquid_adapter.py  order_router.py  paper_broker.py  position_sync.py  slippage_model.py
src/features/: __init__.py  feature_pipeline.py  flow_features.py  funding_features.py  liquidation_features.py  oi_features.py  price_features.py  regime_features.py  temporal_interaction_features.py
src/labels/: __init__.py  labels.py
src/live/: __init__.py  health_checks.py  inference_loop.py  telemetry.py  trade_loop.py
src/models/: __init__.py  base.py  baseline.py  gradient_boost.py  regime.py  registry.py  sequence.py
src/monitoring/: __init__.py  prometheus_metrics.py
src/orchestrator/: __init__.py  live_cycle.py  research_cycle.py  scheduler.py  training_cycle.py
src/portfolio/: __init__.py  consensus.py  constraints.py  ensemble.py  signal_schema.py  sizing.py  stops.py
src/research/: __init__.py  datasets.py  evolutionary_search.py  purged_walk_forward.py  reports.py  scoring.py  selection.py
src/risk/: __init__.py  account_state.py  drawdown_rules.py  exposure.py  kill_switch.py  risk_manager.py
src/storage/: __init__.py  database.py  models.py
tests/: conftest.py
tests/unit/: test_agent.py  (+8 more)
(+2 files in other folders)
